# ai-ml-dl

./: .gitignore  Text_Preprocessing.ipynb  deep_learning.ipynb  pyproject.toml  requirements.txt
data/: story.txt
learning-regex/: README.md  main.py  test.py
