[project]
name = "ai-ml-dl"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "wang2929", email = "tifalsuk@gmail.com"},
]
dependencies = [
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "async-lru==2.3.0",
    "attrs==26.1.0",
    "babel==2.18.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "comm==0.2.3",
    "cuda-bindings==13.2.0",
    "cuda-pathfinder==1.5.0",
    "cuda-toolkit==13.0.2",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.25.2",
    "fqdn==1.5.1",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.11.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "json5==0.13.0",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.4",
    "jupyterlab==4.5.6",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "lark==1.3.1",
    "MarkupSafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mistune==3.2.0",
    "mpmath==1.3.0",
    "nbclient==0.10.4",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nltk==3.9.4",
    "notebook==7.5.5",
    "notebook-shim==0.2.4",
    "numpy==2.4.3",
    "nvidia-cublas==13.1.0.3",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cudnn-cu13==9.19.0.56",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.0",
    "nvidia-nccl-cu13==2.28.9",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "packaging==26.0",
    "pandas==3.0.1",
    "pandocfilters==1.5.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "prometheus-client==0.24.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==3.0",
    "Pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "PyYAML==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "requests==2.33.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.30.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "Send2Trash==2.1.0",
    "setuptools==81.0.0",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "triton==3.6.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "uri-template==1.3.0",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
